--- a/src/components/ui/links/MegaMenuProducts.astro
+++ b/src/components/ui/links/MegaMenuProducts.astro
@@ -41,10 +41,10 @@ const isBrandsActive = brandPaths.some(path => pathname.includes(path));
           class={`group flex flex-col items-center gap-x-5 rounded-lg border border-blue-600 p-2 ${pathname === '/uniview' ? 'bg-blue-50 text-blue-600 dark:bg-neutral-700' : 'hover:bg-neutral-100 dark:text-neutral-200 dark:hover:bg-neutral-500/10'} md:p-4`}
           title="UNV authorized distributor in U.A.E"
           href="/uniview"
-          onmouseover="hoverDetails('/pictures/Brand Logo/unv2.png', 'solution2')"
+          onmouseover="hoverDetails('/pictures/Brand Logo/unv21.jpg', 'solution2')"
         >
           <img
-            src="/pictures/Brand Logo/unv2.png"
+            src="/pictures/Brand Logo/unv21.jpg"
             alt="UNIVIEW"
             class="h-6 w-20 md:w-32"
           />
