--- a/src/pages/alhua.astro
+++ b/src/pages/alhua.astro
@@ -188,7 +188,7 @@ const metaTags = [
             commercial applications.
           </p>
           <div class="animate-fadeIn mt-4 grid w-full sm:inline-flex">
-            <PrimaryCTA title="Contact Us" url="/contact" />
+            <PrimaryCTA title="Explore Our Product" url="/alhuaa" />
           </div>
         </div>
       </div>
