--- a/src/pages/unv/index.astro
+++ b/src/pages/unv/index.astro
@@ -351,7 +351,7 @@ const cards: Card[] = content.map((item) => ({
                     <p class="mb-4 mt-3 text-center text-gray-600 dark:text-gray-300 transition-colors duration-300">
                       {card.desc}
                     </p>
-                    <a href={`/uniview/${card.slug}`} class="read-more-btn">
+                    <a href={`/unv/${card.slug}`} class="read-more-btn">
                       Read More
                     </a>
                   </div>
