--- a/src/pages/uniview.astro
+++ b/src/pages/uniview.astro
@@ -196,7 +196,7 @@ const metaTags = [
           </p>
 
           <div class="animate-fadeIn mt-4 grid w-full sm:inline-flex">
-            <PrimaryCTA title="Explore Our Product" url="/unv" />
+            <PrimaryCTA title="Explore Our Product" url="/unvproducts" />
           </div>
         </div>
       </div>
